<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kushvatsa.birdeye.MainActivity">
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>
    <item android:id="@+id/refresh_data"
        android:title="@string/refresh"
        app:showAsAction="never" />
    <item android:id="@+id/sort_a_z"
        android:title="@string/sort_by_a_z"
        app:showAsAction="never" />
    <item android:id="@+id/sort_z_a"
        android:title="@string/sort_by_z_a"
        app:showAsAction="never" />
</menu>
